--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,9 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>3.5.0</version>
                 <configuration>
+                    <mainClass>com.acme.catchup.platform.CatchUpPlatformApplication</mainClass>
                     <excludes>
+
                         <exclude>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
