--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ environment.name=dev
 # Spring DataSource Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/catch-up-os?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Spring Data JPA Configuration
